--- a/boton-panico-app/package.json
+++ b/boton-panico-app/package.json
@@ -10,8 +10,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-location": "~18.0.10",
