--- a/boton-panico-app/package.json
+++ b/boton-panico-app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.43",
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
