--- a/boton-panico-app/app.json
+++ b/boton-panico-app/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.lenfabricio7.botonpanicoapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "386eb5b2-2906-4e03-97b8-977bc76a6323"
+      }
     }
   }
 }
