--- a/boton-panico-app/app.json
+++ b/boton-panico-app/app.json
@@ -20,7 +20,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.lenfabricio7.botonpanicoapp"
+      "package": "com.lenfabricio7.botonpanicoapp",
+      "usesCleartextTraffic": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
