--- a/boton-panico-app/package.json
+++ b/boton-panico-app/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "expo": "~52.0.43",
+    "expo-device": "~7.0.3",
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
     "expo-status-bar": "~2.0.1",
