--- a/boton-panico-app/eas.json
+++ b/boton-panico-app/eas.json
@@ -9,10 +9,16 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "ENV": "preview"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "ENV": "production"
+      }
     }
   },
   "submit": {
