--- a/boton-panico-app/eas.json
+++ b/boton-panico-app/eas.json
@@ -10,11 +10,17 @@
     },
     "preview": {
       "distribution": "internal",
+      "android": {
+        "googleServicesFile": "./android/google-services.json"
+      },
       "env": {
         "ENV": "preview"
       }
     },
     "production": {
+      "android": {
+        "googleServicesFile": "./android/google-services.json"
+      },
       "autoIncrement": true,
       "env": {
         "ENV": "production"
