Corrige ubicación de google-services.json para Expo

--- a/boton-panico-app/app.json
+++ b/boton-panico-app/app.json
@@ -22,6 +22,7 @@
       },
       "package": "com.lenfabricio7.botonpanicoapp"
        },
+      "googleServicesFile": "./assets/google-services.json",
     "web": {
       "favicon": "./assets/favicon.jpg"
     },
